ml/pose refactoring

--- a/ml/index.html
+++ b/ml/index.html
@@ -53,13 +53,14 @@
         </ul>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/single.js"></a>
-            <a href="./pose/single.html">single</a>: demonstrates working with normalised key points, smoothing them and
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/single/script.js"></a>
+            <a href="./pose/single/index.html">single</a>: demonstrates working with normalised key points, smoothing
+            them and
             visualising on a canvas.
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/multiple.js"></a>
-            <a href="./pose/multiple.html">multiple</a>: an extension of the
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/multiple/script.js"></a>
+            <a href="./pose/multiple/index.html">multiple</a>: an extension of the
             <em>single</em> demo,
             showing how to handle data from several sources.
           </li>
