--- a/ml/pose/multiple/index.html
+++ b/ml/pose/multiple/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pose / multiple</title>
 </head>
-<link rel="stylesheet" href="../base.css">
+<link rel="stylesheet" href="../../base.css">
 
 <style>
   :root {
@@ -39,11 +39,11 @@
 <body>
   <section id="intro">
     <h1>pose / multiple</h1>
-    <p id="intro"> <a href="source.html?model=MoveNet&moveNetModelType=MultiPose.Lightning" target="_blank">Start a
+    <p id="intro"> <a href="../source.html?model=MoveNet&moveNetModelType=MultiPose.Lightning" target="_blank">Start a
         source
         in a new
         window</a>, or click the yellow tick in the corner panel.</p>
-    <p>An extension of <a href="single.html">single</a>, but tracks multiple poses from multiple sources.
+    <p>An extension of <a href="../single/index.html">single</a>, but tracks multiple poses from multiple sources.
     </p>
   </section>
 
@@ -51,11 +51,11 @@
   <button id="btnCloseFrame">Stop corner source</button>
   <section class="m" id="sourceSection">
     <nav>Source</nav>
-    <iframe src="source.html?view=min&model=MoveNet&moveNetModelType=MultiPose.Lightning"></iframe>
+    <iframe src="../source.html?view=min&model=MoveNet&moveNetModelType=MultiPose.Lightning"></iframe>
   </section>
   <!-- ----  -->
 
-  <script type="module" src="multiple.js"></script>
+  <script type="module" src="script.js"></script>
   <canvas id="canvas"></canvas>
 </body>
 
