--- a/ml/pose/single/index.html
+++ b/ml/pose/single/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pose / single</title>
 </head>
-<link rel="stylesheet" href="../base.css">
+<link rel="stylesheet" href="../../base.css">
 
 <style>
   :root {
@@ -40,11 +40,11 @@
   <section id="intro">
 
     <h1>pose / single</h1>
-    <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
+    <p id="intro"> <a href="../source.html" target="_blank">Start a source in a new
         window</a>, or click the yellow tick in the corner panel.</p>
     <p>This demonstrates using a single pose, mapping relative key points to screen coordinates, interpolating for
       reduce
-      glitchiness and drawing on the canvas. See <a href="multiple.html">multiple</a> for
+      glitchiness and drawing on the canvas. See <a href="../multiple/index.html">multiple</a> for
       handling
       multiple sources.
     </p>
@@ -54,11 +54,11 @@
   <button id="btnCloseFrame">Close corner source</button>
   <section class="m" id="sourceSection">
     <nav>Source</nav>
-    <iframe src="source.html?view=min"></iframe>
+    <iframe src="../source.html?view=min"></iframe>
   </section>
   <!-- ----  -->
 
-  <script type="module" src="single.js"></script>
+  <script type="module" src="script.js"></script>
   <canvas id="canvas"></canvas>
 </body>
 
