Updated sketches due to ixfx refactoring

--- a/visuals/index.html
+++ b/visuals/index.html
@@ -26,6 +26,11 @@
             <a href="./function-plot-canvas/">function-plot-canvas</a>: Plot a function on the canvas.
             <div class="techniques">Waveforms</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/visuals/function-plot-canvas"></a>
+            <a href="./particle-things/">particle-things</a>: Array of things is influenced by pointer movement
+            <div class="techniques">Thing, averaging, geometry</div>
+          </li>
         </ul>
       </div>
     </div>
