--- a/visuals/particle-things/index.html
+++ b/visuals/particle-things/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Canvas drawing loop starter</title>
+  <title>particle-things</title>
 </head>
 
 <body>
@@ -38,9 +38,8 @@
     }
   </style>
   <section>
-    <h1>test</h1>
+    <h1>particle-things</h1>
     <div id="debug">
-      DEbug!!
     </div>
     <canvas id="canvas"></canvas>
     <script type="module" src="script.js"></script>
