--- a/ml/pose/geometry/index.html
+++ b/ml/pose/geometry/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pose / point-to-point</title>
 </head>
-<link rel="stylesheet" href="../base.css">
+<link rel="stylesheet" href="../../base.css">
 
 <style>
   :root {
@@ -36,14 +36,15 @@
   }
 
   #data {
-    font-size: 3em;
+    font-size: 2em;
+    font-family: var(--mono-font);
   }
 </style>
 
 <body>
   <section id="intro">
     <h1>pose / point-to-point</h1>
-    <p id="intro"> <a href="source.html" target="_blank">Start the source in a new
+    <p id="intro"> <a href=../source.html" target="_blank">Start the source in a new
         window</a>, or click the yellow tick in the corner panel.</p>
     <p>Demonstration of calculating some basic geometric relations between parts of the body.</p>
   </section>
@@ -52,30 +53,14 @@
   <button id="btnCloseFrame">Close corner source</button>
   <section class="m" id="sourceSection">
     <nav>Source</nav>
-    <iframe src="source.html?view=min"></iframe>
+    <iframe src="../source.html?view=min"></iframe>
   </section>
   <!-- ----  -->
 
   <section id="data">
-    <div>
-      Ankle-foot-hip angle:
-      <div id="dataAngle">?</div>
-    </div>
-    <div>
-      Wrist distance:
-      <div id="dataDistance">?</div>
-    </div>
-    <div>
-      Head rotation:
-      <div id="dataHeadRotation">?</div>
-    </div>
-    <div>
-      Hand-to-hip:
-      <div id="dataHandToHip">?</div>
-    </div>
   </section>
 
-  <script type="module" src="geometry.js"></script>
+  <script type="module" src="script.js"></script>
   <canvas id="canvas"></canvas>
 </body>
 
