Refactor ml/pose

--- a/ml/index.html
+++ b/ml/index.html
@@ -54,7 +54,7 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/single/script.js"></a>
-            <a href="./pose/single/index.html">single</a>: demonstrates working with normalised key points, smoothing
+            <a href="./pose/single/index.html">single</a>: works with normalised key points, smoothing
             them and
             visualising on a canvas.
           </li>
@@ -65,9 +65,9 @@
             showing how to handle data from several sources.
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/geometry.js"></a>
-            <a href="./pose/geometry.html">geometry</a>: demonstrates calculating geometric
-            relation between two parts of the body
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/geometry/script.js"></a>
+            <a href="./pose/geometry/index.html">geometry</a>: calculates geometric
+            relations between parts of the body
           </li>
           <!-- <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/area.js"></a>
