--- a/ml/pose/multiple/index.html
+++ b/ml/pose/multiple/index.html
@@ -34,6 +34,10 @@
   #intro {
     max-width: 15em;
   }
+
+  #debug {
+    font-family: var(--mono-font);
+  }
 </style>
 
 <body>
@@ -56,6 +60,7 @@
   <!-- ----  -->
 
   <script type="module" src="script.js"></script>
+  <div id="debug">debug!</div>
   <canvas id="canvas"></canvas>
 </body>
 
