geometry/circle-math

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -77,8 +77,13 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-path-svg"></a>
             <a href="./circle-path-svg/">SVG circle path</a>: Animate text on a circular path
             <div class="techniques">SVG</div>
-
-            <!-- <li><a href="#">Move along a circle</a></li>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-math"></a>
+            <a href="./circle-math/">math</a>: Nearest point on circle perimeter
+            <div class="techniques"></div>
+          </li>
+          <!-- <li><a href="#">Move along a circle</a></li>
           <li><a href="#">Circle/circle intersections</a></li>
           <li><a href="#">Circle/line intersections</a></li> -->
         </ul>
