--- a/ml/index.html
+++ b/ml/index.html
@@ -65,6 +65,11 @@
             showing how to handle data from several sources.
           </li>
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/multiple/script.js"></a>
+            <a href="./pose/multiple-smoothed/index.html">multiple-smoothed</a>: an extension (and slightly different
+            approach) to <em>multiple</em>, this sketch smooths and processes poses as they arrive.
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/geometry/script.js"></a>
             <a href="./pose/geometry/index.html">geometry</a>: calculates geometric
             relations between parts of the body
