--- a/visuals/index.html
+++ b/visuals/index.html
@@ -31,6 +31,11 @@
             <a href="./particle-things/">particle-things</a>: Array of things is influenced by pointer movement
             <div class="techniques">Thing, averaging, geometry</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/visuals/circle-fill"></a>
+            <a href="./circle-fill/">circle-fill</a>: Different distributions of random points in a circle
+            <div class="techniques">Flow.repeat, random</div>
+          </li>
         </ul>
       </div>
     </div>
