--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -64,6 +64,13 @@
           </li>
           <li><a href="./io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
         </ul>
+
+        <h2>visuals</h2>
+        <ul class="nobullets">
+          <li>
+            <a href="./visuals/circle-fill-animated/">circle-fill</a>: generating points within a circle and animating.
+          </li>
+        </ul>
       </div>
     </section>
   </main>
