--- a/ml/face/single/index.html
+++ b/ml/face/single/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pose / single</title>
 </head>
-<link rel="stylesheet" href="../base.css">
+<link rel="stylesheet" href="../../base.css">
 
 <style>
   :root {
@@ -39,23 +39,21 @@
 <body>
   <section id="intro">
     <h1>face / single</h1>
-    <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
-        window</a>, or click the yellow tick in the corner panel.</p>
-    <p>This demonstrates using a single face, mapping relative key points to screen coordinates, interpolating for
-      reduce
-      glitchiness and drawing on the canvas. See <a href="multiple.html">multiple</a> for handling multiple sources &
-      faces.
-    </p>
+    <p>Click the yellow tick in the small panel to start the camera.</p>
     </div>
     <!-- If you're not using the panel, comment-out these lines... -->
-    <button id="btnCloseFrame">Close corner source</button>
-    <section class="m" id="sourceSection">
-      <nav>Source</nav>
-      <iframe src="source.html?view=min"></iframe>
+    <section class="s" id="sourceSection">
+      <nav><button title="Close frame" id="btnCloseFrame">x</button>
+        <h1>Source</h1>
+        <a id="lnkNewWindow" href="../source.html?model=MoveNet&moveNetModelType=MultiPose.Lightning"
+          target="_blank">New
+          window</a>
+      </nav>
+      <iframe src="../source.html?view=min&id=internal"></iframe>
     </section>
     <!-- ----  -->
 
-    <script type="module" src="single.js"></script>
+    <script type="module" src="script.js"></script>
     <canvas id="canvas"></canvas>
 </body>
 
