ml/pose refactoring

--- a/ml/index.html
+++ b/ml/index.html
@@ -25,9 +25,9 @@
         <h1>objects</h1>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/object/objects.html"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/object/"></a>
             <a class="readme" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/object/README.md"></a>
-            <a href="./object/objects.html">objects</a>: Detect around 90 common objects using the COCO-SSD
+            <a href="./object/multiple/index.html">objects</a>: Detect around 90 common objects using the COCO-SSD
             model.
           </li>
         </ul>
@@ -37,9 +37,9 @@
         <h1>face</h1>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/face/single.html"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/face/single/"></a>
             <a class="readme" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/face/README.md"></a>
-            <a href="./face/single.html">single</a>: Detect and smooth key points for a single face.
+            <a href="./face/single/index.html">single</a>: Detect and smooth key points for a single face.
           </li>
         </ul>
       </div>
@@ -56,23 +56,22 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/single/script.js"></a>
             <a href="./pose/single/index.html">single</a>: works with normalised key points, smoothing
             them and
-            visualising on a canvas.
+            visualising on a canvas. Assumes a single source and single pose.
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/multiple/script.js"></a>
-            <a href="./pose/multiple/index.html">multiple</a>: an extension of the
-            <em>single</em> demo,
-            showing how to handle data from several sources.
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/multiple/script.js"></a>
-            <a href="./pose/multiple-smoothed/index.html">multiple-smoothed</a>: an extension (and slightly different
-            approach) to <em>multiple</em>, this sketch smooths and processes poses as they arrive.
+            <a href="./pose/multiple/index.html">multiple</a>: receive & process multiple poses from any number of
+            sources
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/geometry/script.js"></a>
             <a href="./pose/geometry/index.html">geometry</a>: calculates geometric
             relations between parts of the body
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/gradient/script.js"></a>
+            <a href="./pose/gradient/index.html">gradient</a>: Use horizontal centroid of poses to manipulate gradient
+            stops.
           </li>
           <!-- <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/area.js"></a>
