--- a/ml/object/multiple/index.html
+++ b/ml/object/multiple/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>object / objects</title>
 </head>
-<link rel="stylesheet" href="../base.css">
+<link rel="stylesheet" href="../../base.css">
 <style>
   :root {
     --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -39,14 +39,14 @@
   <section id="intro">
     <h1>object / objects</h1>
     <p>This demo shows consuming and visualising object-detection data.</p>
-    <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
+    <p> <a href="../source.html" target="_blank">Start a source in a new
         window</a>, or click the yellow checkmark in the corner panel.</p>
     </div>
     <section class="m" id="sourceSection">
       <nav>Source</nav>
-      <iframe src="source.html?view=min"></iframe>
+      <iframe src="../source.html?view=min&id=internal"></iframe>
     </section>
-    <script type="module" src="objects.js"></script>
+    <script type="module" src="script.js"></script>
     <canvas id="canvas"></canvas>
 </body>
 
