--- a/ml/pose/multiple_/index.html
+++ b/ml/pose/multiple_/index.html
@@ -4,18 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pose / multiple-smoothed</title>
+  <title>pose / multiple</title>
 </head>
 <link rel="stylesheet" href="../../base.css">
 
 <style>
   :root {
-    --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    --mono-font: "Cascadia Code", Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
     --hue: 200;
     --bg: hsl(var(--hue) 64% 87%);
     --fg: hsl(var(--hue) 100% 10%);
-    --padding: 0.3em;
   }
 
   body {
@@ -42,19 +39,20 @@
 
 <body>
   <section id="intro">
-    <h1>pose / multiple-smoothed</h1>
-    <p id="intro"> <a href="../source.html?model=MoveNet&moveNetModelType=MultiPose.Lightning" target="_blank">Start a
-        source
-        in a new
-        window</a>, or click the yellow tick in the corner panel.</p>
+    <h1>pose / multiple</h1>
+    <p>Start
+      source with the yellow tick in the corner panel.</p>
     <p>An extension of <a href="../single/index.html">single</a>, but tracks multiple poses from multiple sources.
     </p>
   </section>
 
   <!-- If you're not using the panel, comment-out these lines... -->
-  <button id="btnCloseFrame">Stop corner source</button>
-  <section class="m" id="sourceSection">
-    <nav>Source</nav>
+  <section class="s" id="sourceSection">
+    <nav><button title="Close frame" id="btnCloseFrame">x</button>
+      <h1>Source</h1>
+      <a id="lnkNewWindow" href="../source.html?model=MoveNet&moveNetModelType=MultiPose.Lightning" target="_blank">New
+        window</a>
+    </nav>
     <iframe src="../source.html?view=min&model=MoveNet&moveNetModelType=MultiPose.Lightning"></iframe>
   </section>
   <!-- ----  -->
