Added data/pool-key demo

--- a/data/index.html
+++ b/data/index.html
@@ -44,17 +44,26 @@
         <h1>moving average</h1>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/temporal/moving-average-pointer"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/moving-average-pointer"></a>
             <a href="./moving-average-pointer/">pointer</a>: Average x & y
             <div class="techniques">moving average, pointer events</div>
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/temporal/moving-average-audio"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/moving-average-audio"></a>
             <a href="./moving-average-audio/">audio</a>: Average microphone input
             <div class="techniques">moving average, audio</div>
           </li>
         </ul>
-
+      </div>
+      <div>
+        <h1>pool</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/pool-key"></a>
+            <a href="./pool-key/">key</a>: Uses a resource pool to associate a HTML element per keypress
+            <div class="techniques">pool, key events</div>
+          </li>
+        </ul>
       </div>
     </div>
   </main>
