geometry/sphere-fibonacci demo

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -14,7 +14,8 @@
       <a href="../">../</a> geometry
     </header>
     <p><a href="#arc">arcs</a>, <a href="#circle">circles</a>, <a href="#grid">grid</a>, <a href="#polar">polar
-        coordinates</a>, <a href="#point">points</a>, <a href="#line">lines</a>, <a href="#rectangle">rectangles</a>
+        coordinates</a>, <a href="#point">points</a>, <a href="#line">lines</a>, <a href="#rectangle">rectangles</a>, <a
+        href="#sphere">spheres</a>
     <ul class="pillbox">
       <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/">Documentation</a></li>
       <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.html">API Reference</a></li>
@@ -80,8 +81,14 @@
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-math"></a>
-            <a href="./circle-math/">math</a>: Nearest point on circle perimeter
+            <a href="./circle-math/">Math</a>: Nearest point on circle perimeter
             <div class="techniques"></div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-sunflower"></a>
+            <a href="./circle-sunflower/">Sunflower</a>: Calculate points using a Vogel spiral, making a sunflower
+            pattern.
+            <div class="techniques">Generators</div>
           </li>
           <!-- <li><a href="#">Move along a circle</a></li>
           <li><a href="#">Circle/circle intersections</a></li>
@@ -224,6 +231,24 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/rectangle-drawing"></a>
             <a href="./rectangle-drawing/">Drawing</a>
             <div class="techniques">Creating rectangles, compute corners & lines of a rectangle</div>
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <a name="sphere">
+          <h1>spheres</h1>
+        </a>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/spheres/">Documentation</a>
+          </li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Spheres.html">API Reference</a></li>
+        </ul>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/sphere-fibonacci"></a>
+            <a href="./sphere-fibonacci/">Fibonacci</a>: Generate points on a sphere
+            <div class="techniques">Canvas, Spheres</div>
           </li>
         </ul>
       </div>
