--- a/flow/index.html
+++ b/flow/index.html
@@ -33,6 +33,11 @@
             <a href="./throttle/">Throttle</a>: Only respond to events every set interval
             <div class="techniques">Throttle, pointer events</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/completion"></a>
+            <a href="./completion/">Completion</a>: Relative amount of elapsed time
+            <div class="techniques">completionMs</div>
+          </li>
         </ul>
       </div>
       <div>
