geometry/circle-ring update

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -82,13 +82,18 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-math"></a>
             <a href="./circle-math/">Math</a>: Nearest point on circle perimeter
-            <div class="techniques"></div>
+            <div class="techniques">Circle functions</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-sunflower"></a>
             <a href="./circle-sunflower/">Sunflower</a>: Calculate points using a Vogel spiral, making a sunflower
             pattern.
             <div class="techniques">Generators</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-ring"></a>
+            <a href="./circle-ring/">Ring</a>: Distribute elements around a circle
+            <div class="techniques">Polar coordinates</div>
           </li>
           <!-- <li><a href="#">Move along a circle</a></li>
           <li><a href="#">Circle/circle intersections</a></li>
