Changed due to ixfx updates

--- a/flow/index.html
+++ b/flow/index.html
@@ -53,6 +53,11 @@
             <div class="techniques">State machine</div>
           </li>
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-agent"></a>
+            <a href="./statemachine-agent/">agent</a>: Uses the state machine driver for agent-like behaviour
+            <div class="techniques">State machine driver</div>
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-regions"></a>
             <a href="./statemachine-regions/">regions</a>: Uses a 'driver' to change state based on certain conditions.
             <div class="techniques">State machine driver</div>
