Update for ixfx changes

--- a/flow/statemachine-starter/index.html
+++ b/flow/statemachine-starter/index.html
@@ -21,7 +21,12 @@
     <button id="btnAngry">Angry</button>
     <button id="btnSleep">Sleep</button>
 
-    <div id="state">sleep</div>
+    <div>
+      Current: <span id="state"></span>
+    </div>
+    <div>
+      Possible: <span id="possibleStates"></span>
+    </div>
   </section>
   <script type="module" src="script.js"></script>
 </body>
